Fixing image alignment for images that are not full width

--- a/_includes/_sass-core/_modifiers.scss
+++ b/_includes/_sass-core/_modifiers.scss
@@ -185,6 +185,7 @@
 }
 img.left {
   margin: 0 $spacing $spacing-tight 0;
+  margin-right: $spacing !important;
 }
 
 .light-text{
@@ -208,6 +209,7 @@ img.left {
 }
 img.right {
   margin: 0 0 $spacing $spacing-tight;
+  margin-left: $spacing !important;
 }
 
 // S
